added getByID for tool_type service and handler
