# backend/tools/internal/domains/tool_type/usecase/get_by_id.go
@@ -1,0 +1,7 @@
+package tool_type_usecase
+
+import "github.com/PereverzevIvan/razrabotka-biznes-prilojenii-konditerskaya/backend/tools/internal/models"
+
+func (u *ToolTypeUsecase) GetByID(id int) (*models.ToolType, error) {
+	return u.toolTypeRepo.GetByID(id)
+}
