# proto/pkg/api/tool_type/service.pb.go
@@ -102,6 +102,94 @@ func (x *ToolTypeGetAllResponse) GetToolType() []*ToolType {
 	return nil
 }
 
+type ToolTypeGetByIDRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Id            int32                  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *ToolTypeGetByIDRequest) Reset() {
+	*x = ToolTypeGetByIDRequest{}
+	mi := &file_api_tool_type_service_proto_msgTypes[2]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *ToolTypeGetByIDRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ToolTypeGetByIDRequest) ProtoMessage() {}
+
+func (x *ToolTypeGetByIDRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_tool_type_service_proto_msgTypes[2]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ToolTypeGetByIDRequest.ProtoReflect.Descriptor instead.
+func (*ToolTypeGetByIDRequest) Descriptor() ([]byte, []int) {
+	return file_api_tool_type_service_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *ToolTypeGetByIDRequest) GetId() int32 {
+	if x != nil {
+		return x.Id
+	}
+	return 0
+}
+
+type ToolTypeGetByIDResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	ToolType      *ToolType              `protobuf:"bytes,1,opt,name=tool_type,json=toolType,proto3" json:"tool_type,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *ToolTypeGetByIDResponse) Reset() {
+	*x = ToolTypeGetByIDResponse{}
+	mi := &file_api_tool_type_service_proto_msgTypes[3]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *ToolTypeGetByIDResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ToolTypeGetByIDResponse) ProtoMessage() {}
+
+func (x *ToolTypeGetByIDResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_api_tool_type_service_proto_msgTypes[3]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ToolTypeGetByIDResponse.ProtoReflect.Descriptor instead.
+func (*ToolTypeGetByIDResponse) Descriptor() ([]byte, []int) {
+	return file_api_tool_type_service_proto_rawDescGZIP(), []int{3}
+}
+
+func (x *ToolTypeGetByIDResponse) GetToolType() *ToolType {
+	if x != nil {
+		return x.ToolType
+	}
+	return nil
+}
+
 var File_api_tool_type_service_proto protoreflect.FileDescriptor
 
 var file_api_tool_type_service_proto_rawDesc = string([]byte{
@@ -117,22 +205,36 @@ var file_api_tool_type_service_proto_rawDesc = string([]byte{
 	0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x30, 0x0a, 0x09, 0x74, 0x6f, 0x6f, 0x6c, 0x5f, 0x74, 0x79,
 	0x70, 0x65, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x13, 0x2e, 0x74, 0x6f, 0x6f, 0x6c, 0x5f,
 	0x74, 0x79, 0x70, 0x65, 0x2e, 0x54, 0x6f, 0x6f, 0x6c, 0x54, 0x79, 0x70, 0x65, 0x52, 0x08, 0x74,
-	0x6f, 0x6f, 0x6c, 0x54, 0x79, 0x70, 0x65, 0x32, 0x79, 0x0a, 0x0f, 0x54, 0x6f, 0x6f, 0x6c, 0x54,
-	0x79, 0x70, 0x65, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x66, 0x0a, 0x06, 0x47, 0x65,
-	0x74, 0x41, 0x6c, 0x6c, 0x12, 0x20, 0x2e, 0x74, 0x6f, 0x6f, 0x6c, 0x5f, 0x74, 0x79, 0x70, 0x65,
-	0x2e, 0x54, 0x6f, 0x6f, 0x6c, 0x54, 0x79, 0x70, 0x65, 0x47, 0x65, 0x74, 0x41, 0x6c, 0x6c, 0x52,
-	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x21, 0x2e, 0x74, 0x6f, 0x6f, 0x6c, 0x5f, 0x74, 0x79,
-	0x70, 0x65, 0x2e, 0x54, 0x6f, 0x6f, 0x6c, 0x54, 0x79, 0x70, 0x65, 0x47, 0x65, 0x74, 0x41, 0x6c,
-	0x6c, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x17, 0x82, 0xd3, 0xe4, 0x93, 0x02,
-	0x11, 0x12, 0x0f, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x74, 0x6f, 0x6f, 0x6c, 0x2d, 0x74, 0x79, 0x70,
-	0x65, 0x73, 0x42, 0x68, 0x5a, 0x66, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d,
-	0x2f, 0x50, 0x65, 0x72, 0x65, 0x76, 0x65, 0x72, 0x7a, 0x65, 0x76, 0x49, 0x76, 0x61, 0x6e, 0x2f,
-	0x72, 0x61, 0x7a, 0x72, 0x61, 0x62, 0x6f, 0x74, 0x6b, 0x61, 0x2d, 0x62, 0x69, 0x7a, 0x6e, 0x65,
-	0x73, 0x2d, 0x70, 0x72, 0x69, 0x6c, 0x6f, 0x6a, 0x65, 0x6e, 0x69, 0x69, 0x2d, 0x6b, 0x6f, 0x6e,
-	0x64, 0x69, 0x74, 0x65, 0x72, 0x73, 0x6b, 0x61, 0x79, 0x61, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f,
-	0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x74, 0x6f, 0x6f, 0x6c, 0x5f, 0x74, 0x79,
-	0x70, 0x65, 0x3b, 0x74, 0x6f, 0x6f, 0x6c, 0x5f, 0x74, 0x79, 0x70, 0x65, 0x62, 0x06, 0x70, 0x72,
-	0x6f, 0x74, 0x6f, 0x33,
+	0x6f, 0x6f, 0x6c, 0x54, 0x79, 0x70, 0x65, 0x22, 0x28, 0x0a, 0x16, 0x54, 0x6f, 0x6f, 0x6c, 0x54,
+	0x79, 0x70, 0x65, 0x47, 0x65, 0x74, 0x42, 0x79, 0x49, 0x44, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
+	0x74, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x05, 0x52, 0x02, 0x69,
+	0x64, 0x22, 0x4b, 0x0a, 0x17, 0x54, 0x6f, 0x6f, 0x6c, 0x54, 0x79, 0x70, 0x65, 0x47, 0x65, 0x74,
+	0x42, 0x79, 0x49, 0x44, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x30, 0x0a, 0x09,
+	0x74, 0x6f, 0x6f, 0x6c, 0x5f, 0x74, 0x79, 0x70, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32,
+	0x13, 0x2e, 0x74, 0x6f, 0x6f, 0x6c, 0x5f, 0x74, 0x79, 0x70, 0x65, 0x2e, 0x54, 0x6f, 0x6f, 0x6c,
+	0x54, 0x79, 0x70, 0x65, 0x52, 0x08, 0x74, 0x6f, 0x6f, 0x6c, 0x54, 0x79, 0x70, 0x65, 0x32, 0xe9,
+	0x01, 0x0a, 0x0f, 0x54, 0x6f, 0x6f, 0x6c, 0x54, 0x79, 0x70, 0x65, 0x53, 0x65, 0x72, 0x76, 0x69,
+	0x63, 0x65, 0x12, 0x66, 0x0a, 0x06, 0x47, 0x65, 0x74, 0x41, 0x6c, 0x6c, 0x12, 0x20, 0x2e, 0x74,
+	0x6f, 0x6f, 0x6c, 0x5f, 0x74, 0x79, 0x70, 0x65, 0x2e, 0x54, 0x6f, 0x6f, 0x6c, 0x54, 0x79, 0x70,
+	0x65, 0x47, 0x65, 0x74, 0x41, 0x6c, 0x6c, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x21,
+	0x2e, 0x74, 0x6f, 0x6f, 0x6c, 0x5f, 0x74, 0x79, 0x70, 0x65, 0x2e, 0x54, 0x6f, 0x6f, 0x6c, 0x54,
+	0x79, 0x70, 0x65, 0x47, 0x65, 0x74, 0x41, 0x6c, 0x6c, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73,
+	0x65, 0x22, 0x17, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x11, 0x12, 0x0f, 0x2f, 0x61, 0x70, 0x69, 0x2f,
+	0x74, 0x6f, 0x6f, 0x6c, 0x2d, 0x74, 0x79, 0x70, 0x65, 0x73, 0x12, 0x6e, 0x0a, 0x07, 0x47, 0x65,
+	0x74, 0x42, 0x79, 0x49, 0x44, 0x12, 0x21, 0x2e, 0x74, 0x6f, 0x6f, 0x6c, 0x5f, 0x74, 0x79, 0x70,
+	0x65, 0x2e, 0x54, 0x6f, 0x6f, 0x6c, 0x54, 0x79, 0x70, 0x65, 0x47, 0x65, 0x74, 0x42, 0x79, 0x49,
+	0x44, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x22, 0x2e, 0x74, 0x6f, 0x6f, 0x6c, 0x5f,
+	0x74, 0x79, 0x70, 0x65, 0x2e, 0x54, 0x6f, 0x6f, 0x6c, 0x54, 0x79, 0x70, 0x65, 0x47, 0x65, 0x74,
+	0x42, 0x79, 0x49, 0x44, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1c, 0x82, 0xd3,
+	0xe4, 0x93, 0x02, 0x16, 0x12, 0x14, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x74, 0x6f, 0x6f, 0x6c, 0x2d,
+	0x74, 0x79, 0x70, 0x65, 0x73, 0x2f, 0x7b, 0x69, 0x64, 0x7d, 0x42, 0x68, 0x5a, 0x66, 0x67, 0x69,
+	0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x50, 0x65, 0x72, 0x65, 0x76, 0x65, 0x72,
+	0x7a, 0x65, 0x76, 0x49, 0x76, 0x61, 0x6e, 0x2f, 0x72, 0x61, 0x7a, 0x72, 0x61, 0x62, 0x6f, 0x74,
+	0x6b, 0x61, 0x2d, 0x62, 0x69, 0x7a, 0x6e, 0x65, 0x73, 0x2d, 0x70, 0x72, 0x69, 0x6c, 0x6f, 0x6a,
+	0x65, 0x6e, 0x69, 0x69, 0x2d, 0x6b, 0x6f, 0x6e, 0x64, 0x69, 0x74, 0x65, 0x72, 0x73, 0x6b, 0x61,
+	0x79, 0x61, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70, 0x69,
+	0x2f, 0x74, 0x6f, 0x6f, 0x6c, 0x5f, 0x74, 0x79, 0x70, 0x65, 0x3b, 0x74, 0x6f, 0x6f, 0x6c, 0x5f,
+	0x74, 0x79, 0x70, 0x65, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 })
 
 var (
@@ -147,21 +249,26 @@ func file_api_tool_type_service_proto_rawDescGZIP() []byte {
 	return file_api_tool_type_service_proto_rawDescData
 }
 
-var file_api_tool_type_service_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_api_tool_type_service_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
 var file_api_tool_type_service_proto_goTypes = []any{
-	(*ToolTypeGetAllRequest)(nil),  // 0: tool_type.ToolTypeGetAllRequest
-	(*ToolTypeGetAllResponse)(nil), // 1: tool_type.ToolTypeGetAllResponse
-	(*ToolType)(nil),               // 2: tool_type.ToolType
+	(*ToolTypeGetAllRequest)(nil),   // 0: tool_type.ToolTypeGetAllRequest
+	(*ToolTypeGetAllResponse)(nil),  // 1: tool_type.ToolTypeGetAllResponse
+	(*ToolTypeGetByIDRequest)(nil),  // 2: tool_type.ToolTypeGetByIDRequest
+	(*ToolTypeGetByIDResponse)(nil), // 3: tool_type.ToolTypeGetByIDResponse
+	(*ToolType)(nil),                // 4: tool_type.ToolType
 }
 var file_api_tool_type_service_proto_depIdxs = []int32{
-	2, // 0: tool_type.ToolTypeGetAllResponse.tool_type:type_name -> tool_type.ToolType
-	0, // 1: tool_type.ToolTypeService.GetAll:input_type -> tool_type.ToolTypeGetAllRequest
-	1, // 2: tool_type.ToolTypeService.GetAll:output_type -> tool_type.ToolTypeGetAllResponse
-	2, // [2:3] is the sub-list for method output_type
-	1, // [1:2] is the sub-list for method input_type
-	1, // [1:1] is the sub-list for extension type_name
-	1, // [1:1] is the sub-list for extension extendee
-	0, // [0:1] is the sub-list for field type_name
+	4, // 0: tool_type.ToolTypeGetAllResponse.tool_type:type_name -> tool_type.ToolType
+	4, // 1: tool_type.ToolTypeGetByIDResponse.tool_type:type_name -> tool_type.ToolType
+	0, // 2: tool_type.ToolTypeService.GetAll:input_type -> tool_type.ToolTypeGetAllRequest
+	2, // 3: tool_type.ToolTypeService.GetByID:input_type -> tool_type.ToolTypeGetByIDRequest
+	1, // 4: tool_type.ToolTypeService.GetAll:output_type -> tool_type.ToolTypeGetAllResponse
+	3, // 5: tool_type.ToolTypeService.GetByID:output_type -> tool_type.ToolTypeGetByIDResponse
+	4, // [4:6] is the sub-list for method output_type
+	2, // [2:4] is the sub-list for method input_type
+	2, // [2:2] is the sub-list for extension type_name
+	2, // [2:2] is the sub-list for extension extendee
+	0, // [0:2] is the sub-list for field type_name
 }
 
 func init() { file_api_tool_type_service_proto_init() }
@@ -176,7 +283,7 @@ func file_api_tool_type_service_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: unsafe.Slice(unsafe.StringData(file_api_tool_type_service_proto_rawDesc), len(file_api_tool_type_service_proto_rawDesc)),
 			NumEnums:      0,
-			NumMessages:   2,
+			NumMessages:   4,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
